--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,21 +20,21 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-  job:
-    image: gitea.hostedapp.org/broadcast/broadcast:latest
-    platform: linux/${TARGETARCH:-amd64}
-    pull_policy: always
-    container_name: job
-    restart: always
-    env_file:
-      - /opt/broadcast/app/.env
-    volumes:
-      - /opt/broadcast/app/storage:/rails/storage
-    networks:
-      - broadcast-network
-    depends_on:
-      postgres:
-        condition: service_healthy
+  # job:
+  #   image: gitea.hostedapp.org/broadcast/broadcast:latest
+  #   platform: linux/${TARGETARCH:-amd64}
+  #   pull_policy: always
+  #   container_name: job
+  #   restart: always
+  #   env_file:
+  #     - /opt/broadcast/app/.env
+  #   volumes:
+  #     - /opt/broadcast/app/storage:/rails/storage
+  #   networks:
+  #     - broadcast-network
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
   postgres:
     image: postgres:17-alpine
     container_name: postgres
