Fix code format, and add command override for manual docker compose

--- a/docker-compose.manual.yml
+++ b/docker-compose.manual.yml
@@ -1,5 +1,6 @@
 services:
   app:
+    command: bin/rails server
     ports:
       - "127.0.0.1:3000:3000" # Or replace with your desired port
     env_file:
