--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - /opt/broadcast/app/.env
     volumes:
       - /opt/broadcast/app/storage:/rails/storage
+      - /opt/broadcast/app/uploads:/rails/uploads
     networks:
       - broadcast-network
     depends_on:
